corrected spacing on top of header photo

--- a/landingpage.css
+++ b/landingpage.css
@@ -1,6 +1,16 @@
 body {
   background:linear-gradient(to bottom right, RGBa(47,47,47,0.5), RGBa(0,0,0,1));
   background-color: #8C8C8C;
+  background-repeat: no-repeat;
+}
+
+h1{
+  text-align: center;
+  color: white;
+}
+.links mainheader{
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .copyright {
