--- a/resumepage.css
+++ b/resumepage.css
@@ -18,7 +18,7 @@
   display: block;
   height:250px;
   margin: auto;
-  margin-top: 20px;
+  margin-top: 0px;
   position:top left;
 }
 
